--- a/Management.html
+++ b/Management.html
@@ -15,11 +15,8 @@
     <div class="Web_Content">
         <div class="Left_Sidebar">
             <div class="title">
-                <a href="/index.html"><img class="back" src="/img/Management.jpg" ></a>
-                <a href="/Tech.html"><img class="Change"  src="/img/Change.jpg" ></a>
-            </div>
-            <div>
-                
+                <a href="/index.html"><img class="back" src="/img/Management.jpg"></a>
+                <a href="/Tech.html"><img class="Change" src="/img/Change.jpg"></a>
             </div>
             <div class="search">
                 <input id="text" class="sbox">
@@ -29,59 +26,34 @@
             <ul class="drop-down-menu">
                 <li><a href="#">學習直通車</a>
                     <ul>
-                        <li><a href="#">領導管理/危機管理</a>
-                        </li>
-                        <li><a href="#">時間管理/ 高效工作/ 項目管理/ 危機管理</a>
-                        </li>
-                        <li><a href="#">邏輯思維/ 思維導圖/ 目標管理/ 績效管理</a>
-                        </li>
-                        <li><a href="#">溝通/ 談判/ 有效會議</a>
-                        </li>
-                        <li><a href="#">轉型變革</a>
-                        </li>
+                        <li><a href="#">紀錄</a></li>
+                        <li><a href="#">課程推薦</a></li>
+                        <li><a href="#">反饋與評鑑</a></li>
+                        <li><a href="#">講師評鑑</a></li>
                     </ul>
                 </li>
                 <li><a href="#">雲端課程</a>
                     <ul>
-                        <li><a href="#">領導管理/危機管理</a>
-                        </li>
-                        <li><a href="#">時間管理/ 高效工作/ 項目管理/ 危機管理</a>
-                        </li>
-                        <li><a href="#">邏輯思維/ 思維導圖/ 目標管理/ 績效管理</a>
-                        </li>
-                        <li><a href="#">溝通/ 談判/ 有效會議</a>
-                        </li>
-                        <li><a href="#">轉型變革</a>
-                        </li>
+                        <li><a href="#">學習數據</a></li>
+                        <li><a href="#">學習行為</a></li>
+                        <li><a href="#">消息或課程</a></li>
+                        <li><a href="#">用戶回饋</a></li>
                     </ul>
                 </li>
                 <li><a href="#">富學寶典</a>
                     <ul>
-                        <li><a href="#">領導管理/危機管理</a>
-                        </li>
-                        <li><a href="#">時間管理/ 高效工作/ 項目管理/ 危機管理</a>
-                        </li>
-                        <li><a href="#">邏輯思維/ 思維導圖/ 目標管理/ 績效管理</a>
-                        </li>
-                        <li><a href="#">溝通/ 談判/ 有效會議</a>
-                        </li>
-                        <li><a href="#">轉型變革</a>
-                        </li>
+                        <li><a href="#">學習紀錄</a></li>
                     </ul>
                 </li>
             </ul>
         </div>
         <div class="Right_Content">
-
             <input type="radio" id="tab1" name="tabGroup1" class="tab1" checked>
             <label for="tab1">基礎簡介</label>
-
             <input type="radio" id="tab2" name="tabGroup1" class="tab2">
             <label for="tab2">進階知識</label>
-
             <input type="radio" id="tab3" name="tabGroup1" class="tab3">
             <label for="tab3">延伸學習</label>
-
             <div class="tab__content">
                 <section class="videos">
                     <ul class="video-list">
@@ -90,7 +62,6 @@
                                 <div class="video-preview-image">
                                     <img src="/img/2-1.jfif" alt="">
                                 </div>
-
                                 <div class="Word">
                                     <h2 class="content">Randy Pausch時間管理演講</h2>
                                     <h6>演講人:Randy Pausch</h6>
@@ -101,16 +72,13 @@
                                     </h6>
                                     <span class="watch">觀看次數:781</span>
                                 </div>
-
                             </a>
                         </li>
                         <li class="video-list__item">
                             <a href="#">
-
                                 <div class="video-preview-image">
                                     <img src="/img/1-2.jfif" alt="">
                                 </div>
-
                                 <div class="Word">
                                     <h2 class="content">【孫運璿先生管理講座】</h2>
                                     <h6>演講人:徐重仁董事長</h6>
@@ -120,7 +88,6 @@
                                     </h6>
                                     <span class="watch">觀看次數:78819</span>
                                 </div>
-
                             </a>
                         </li>
                         <li class="video-list__item">
@@ -159,9 +126,7 @@
                                         「知道要完成什麼，和真的投入時間去將它完成，是兩件截然不同的事。」</h6>
                                     <span class="watch">觀看次數:78819</span>
                                 </div>
-
                             </a>
-
                         </li>
                         <li class="video-list__item">
                             <a href="#">
@@ -176,7 +141,6 @@
                                     </h6>
                                     <span class="watch">觀看次數:78819</span>
                                 </div>
-
                             </a>
                         </li>
                         <ul class="pagination">
@@ -193,18 +157,14 @@
                     </ul>
                 </section>
             </div>
-
             <div class="tab__content">
                 <section class="videos">
                     <ul class="video-list">
-
                         <li class="video-list__item">
                             <a href="#">
-
                                 <div class="video-preview-image">
                                     <img src="/img/1-2.jfif" alt="">
                                 </div>
-
                                 <div class="Word">
                                     <h2 class="content">【孫運璿先生管理講座】</h2>
                                     <h6>演講人:徐重仁董事長</h6>
@@ -214,7 +174,6 @@
                                     </h6>
                                     <span class="watch">觀看次數:78819</span>
                                 </div>
-
                             </a>
                         </li>
                         <li class="video-list__item">
@@ -253,9 +212,7 @@
                                         「知道要完成什麼，和真的投入時間去將它完成，是兩件截然不同的事。」</h6>
                                     <span class="watch">觀看次數:78819</span>
                                 </div>
-
                             </a>
-
                         </li>
                         <li class="video-list__item">
                             <a href="#">
@@ -270,7 +227,6 @@
                                     </h6>
                                     <span class="watch">觀看次數:78819</span>
                                 </div>
-
                             </a>
                         </li>
                         <li class="video-list__item">
@@ -278,7 +234,6 @@
                                 <div class="video-preview-image">
                                     <img src="/img/2-1.jfif" alt="">
                                 </div>
-
                                 <div class="Word">
                                     <h2 class="content">Randy Pausch時間管理演講</h2>
                                     <h6>演講人:Randy Pausch</h6>
@@ -289,7 +244,6 @@
                                     </h6>
                                     <span class="watch">觀看次數:781</span>
                                 </div>
-
                             </a>
                         </li>
                         <ul class="pagination">
@@ -305,13 +259,10 @@
                         </ul>
                     </ul>
                 </section>
-
             </div>
-
             <div class="tab__content">
                 <section class="videos">
                     <ul class="video-list">
-
                         <li class="video-list__item">
                             <a href="#">
                                 <div class="video-preview-image">
@@ -348,9 +299,7 @@
                                         「知道要完成什麼，和真的投入時間去將它完成，是兩件截然不同的事。」</h6>
                                     <span class="watch">觀看次數:78819</span>
                                 </div>
-
                             </a>
-
                         </li>
                         <li class="video-list__item">
                             <a href="#">
@@ -365,7 +314,6 @@
                                     </h6>
                                     <span class="watch">觀看次數:78819</span>
                                 </div>
-
                             </a>
                         </li>
                         <li class="video-list__item">
@@ -373,7 +321,6 @@
                                 <div class="video-preview-image">
                                     <img src="/img/2-1.jfif" alt="">
                                 </div>
-
                                 <div class="Word">
                                     <h2 class="content">Randy Pausch時間管理演講</h2>
                                     <h6>演講人:Randy Pausch</h6>
@@ -389,11 +336,9 @@
                         </li>
                         <li class="video-list__item">
                             <a href="#">
-
                                 <div class="video-preview-image">
                                     <img src="/img/1-2.jfif" alt="">
                                 </div>
-
                                 <div class="Word">
                                     <h2 class="content">【孫運璿先生管理講座】</h2>
                                     <h6>演講人:徐重仁董事長</h6>
@@ -403,7 +348,6 @@
                                     </h6>
                                     <span class="watch">觀看次數:78819</span>
                                 </div>
-
                             </a>
                         </li>
                         <ul class="pagination">
@@ -420,11 +364,7 @@
                     </ul>
                 </section>
             </div>
-
         </div>
-
-
-
     </div>
     <div class="Web_footer">
         <footer class="footer">
@@ -435,5 +375,4 @@
         </footer>
     </div>
 </body>
-
 </html>
