--- a/Tech.html
+++ b/Tech.html
@@ -27,44 +27,23 @@
                 <ul class="drop-down-menu">
                     <li><a href="#">學習直通車</a>
                         <ul>
-                            <li><a href="#">工業互聯網類</a>
-                            </li>
-                            <li><a href="#">人工智能類</a>
-                            </li>
-                            <li><a href="#">5G+物聯網類</a>
-                            </li>
-                            <li><a href="#">大數據/雲計算類</a>
-                            </li>
-                            <li><a href="#">AR/VR/MR類</a>
-                            </li>
+                            <li><a href="#">紀錄</a></li>
+                            <li><a href="#">課程推薦</a></li>
+                            <li><a href="#">反饋與評鑑</a></li>
+                            <li><a href="#">講師評鑑</a></li>
                         </ul>
                     </li>
                     <li><a href="#">雲端課程</a>
                         <ul>
-                            <li><a href="#">工業互聯網類</a>
-                            </li>
-                            <li><a href="#">人工智能類</a>
-                            </li>
-                            <li><a href="#">5G+物聯網類</a>
-                            </li>
-                            <li><a href="#">大數據/雲計算類</a>
-                            </li>
-                            <li><a href="#">AR/VR/MR類</a>
-                            </li>
+                            <li><a href="#">學習數據</a></li>
+                            <li><a href="#">學習行為</a></li>
+                            <li><a href="#">消息或課程</a></li>
+                            <li><a href="#">用戶回饋</a></li>
                         </ul>
                     </li>
                     <li><a href="#">富學寶典</a>
                         <ul>
-                            <li><a href="#">工業互聯網類</a>
-                            </li>
-                            <li><a href="#">人工智能類</a>
-                            </li>
-                            <li><a href="#">5G+物聯網類</a>
-                            </li>
-                            <li><a href="#">大數據/雲計算類</a>
-                            </li>
-                            <li><a href="#">AR/VR/MR類</a>
-                            </li>
+                            <li><a href="#">學習紀錄</a></li>
                         </ul>
                     </li>
                 </ul>
