--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <p class="mtext1">雲&thinsp;&thinsp; 端</p>
 
                 <div class="select2 move4 ">
-                    <div class="stext "><a href="/Management.html">管理</a></div>
+                    <div class="stext "><a href="/Management.html"> &ensp;管理</a></div>
                     <div class="Options2 corner type">
                         <div class="Otext radiustop"> &ensp;工業互聯網類</div>
                         <div class="Otext"> &ensp;人工智能類</div>
@@ -63,15 +63,15 @@
                     </div></div>
                     
                         <div class="select2 move2 ">
-                            <div class="stext bigtype">學習通車</div>
+                            <div class="stext bigtype">&ensp;學習<p>直通車</div>
                             <div class="Options2 corner type2">
                                 <div class="Otext radiustop"> &ensp;培訓課程學習記錄、 &ensp;課程推薦</div>
                                 <div class="Otext"> &ensp;課程反饋及評鑑</div>
                                 <div class="Otext radiusbottom"> &ensp;講師評鑑、學分管理</div>
                             </div></div>
                         <div class="select2 move ">
-                            <div class="stext ">雲端課程</div>
-                            <div class="Options2 corner type">
+                            <div class="stext "> &ensp;雲端<p>&ensp;課程</p></div>
+                            <div class="Options2 corner type4">
                                 <div class="Otext radiustop"> &ensp;用戶學習數據</div>
                                 <div class="Otext"> &ensp;用戶學習行為</div>
                                 <div class="Otext"> &ensp;消息或課程推送</div>
@@ -80,13 +80,13 @@
                             </div></div>
 
                             <div class="select2 move5">
-                                <div class="stext ">富學寶典</div>
+                                <div class="stext "> &ensp; 富學<p>&ensp; 寶典</p></div>
                                 <div class="Options2 corner type5">
                                     <div class="Otext radiustop radiusbottom"> &ensp;導入富學寶典的學習記錄</div>
                                 </div>
                             </div>
                                 <div class="select2 move3 ">
-                                    <div class="stext "><a href="/Tech.html">科技</a> </div>
+                                    <div class="stext "><a href="/Tech.html">&ensp;科技</a> </div>
                                     <div class="Options2 corner type3">
                                         <div class="Otext radiustop"> &ensp;領導管理/危機管理</div>
                                         <div class="Otext"> &ensp;時間管理/ 高效工作/項目管理/ 危機管理</div>
