--- a/detail.html
+++ b/detail.html
@@ -17,52 +17,90 @@
 
         </div>
     </div>
-    <div class="big">
+    <div align=center class="big">
         <div class="up">
             <div class="play">
-                <iframe width="961" height="721" src="https://www.youtube.com/embed/gbsXVrg6biE" frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen></iframe>
+                <video class="video" src="/時間管理演講.mp4" controls></video>
             </div>
             <div class="word">
                 <span>
-                    <p>演講人:Randy Pausch</p>
-                    <p>Randy Pausch時間管理演講</p>
                     <p>
-                        2008年，Randy Pausch生前在維吉尼亞大學進行的一場演講，教導學生、老師如何善用自己時間的演講。
-                        這場演講十分實用，並且可一窺Randy教授平常工作的態度和對待世界的不同角度。
-                        請下載字幕來合併觀看。
-                    </p>
-                    <p>影片時長: 14:24</p>
-                    <p>上傳日期: 2010年9月10日</p>
-                    <p>觀看次數:781</p>
-                    <p>課程目標:</p>
+                    <H2>Randy Pausch時間管理演講</H2><br>
+                    演講人:Randy Pausch <br>
+                    2008年，Randy Pausch生前在維吉尼亞大學進行的一場演講，教導學生、老師如何善用自己時間的演講。
+                    這場演講十分實用，並且可一窺Randy教授平常工作的態度和對待世界的不同角度。
+                    請下載字幕來合併觀看。<br>
+                    影片時長: 14:24<br>
+                    上傳日期: 2010年9月10日<br>
+                    觀看次數:781<br>
+                    課程目標:</p>
                 </span>
             </div>
-
         </div>
         <div class="down">
-            <div class="Related-videos">
-                <div class="img1 img-ob">
-                    <img src="/img/2-1.jfif" alt="">
+            <div  class="Related-videos">
+                <div class="play-list">
+                <div><img src="/img/2-1.jfif" alt=""></div>    
+                <div><p >
+                    <p class="content">演講人:Randy Pausch</p>
+                    <p class="content">科技洞悉你的感受</p>
+                    <p class="content">
+                        當科技比我們更了解自己時，會發生什麼事情呢？波碧·克文研究人類如何表達情緒。她認為撲克臉的時代終將結束，因為科技能輕易地讀懂我們透露出來的情緒信號。在一次演講和技術展示中，波碧·克文展示了如何透過「同理心技術」
+                        讀懂像身體溫度和呼吸中的化學成份這些生理訊息，而這些訊息能透露我們的感受。無論好壞，克文認為「如果我們能體悟同理心的力量，就能掌握科技，用科技幫助我們跨越情感和認知的鴻溝。」</p>
+                    <p class="content"> 觀看次數:7 </p>
+                    </p></div>    
+
                 </div>
-                <div class="img2 img-ob">
+                <div class="play-list">
                     <img src="/img/2-2.jfif" alt="">
+                    
+                    <p>
+
+                    <p class="content">演講人:Ray Kurzweil</p>
+                    <p class="content">科技將如何改造我們</p>
+                    <p class="content">發明家，企業家和展望未來的夢想家 Ray Kurzweil，
+                        以豐富合理的事例來描述，人類如何在2020年以前擁有人腦的逆向工程技術，以及可以操縱人類意念的奈米機器人。</p>
+                    <p class="content">觀看次數:73318</p>
+                    <p class="content"></p>
+                    </p>
                 </div>
-                <div class="img3 img-ob">
+                <div class="play-list">
                     <img src="/img/2-3.jfif" alt="">
+                    <p>
+                        <span class="watch"></span>
+                    <p class="content">演講人:喬治．圖雷斯基</p>
+                    <p class="content">奈米科技的未來</p>
+                    <p class="content">
+                        每年，矽晶的電腦晶片大小都會縮小一半，而且速度會增加一倍，使我們的電子設備變得越來越方便、越來越親民。但如果有一天我們的晶片不能再縮小了，那會發生什麼事？喬治．圖雷斯基（George
+                        Tulevski）專研那些看不到、尚未開發的奈米材料。他目前的工作：開發化學製程，讓好幾十億的奈米碳管可以自行組裝成樣板所需要的迴路，他的方式與大自然有機體非常的相似，可以建造出錯綜複雜、多樣化、優雅的結構。他們會揭露下一個電腦世代的秘密嗎？
+                    </p>
+                    <p class="content">觀看次數:75818</p>
+                    </p>
                 </div>
-                <div class="img4 img-ob">
+                <div class="play-list">
                     <img src="/img/2-4.jfif" alt="">
+                    <p>
+                    <p class="content">演講人:Kevin Kelly</p>
+                    <p class="content">談科技如何演化</p>
+                    <p class="content">科技狂熱者 Kevin Kelly 問：「科技要的是什麼？」，並發現它趨向普遍及複雜，就像生命的演化一樣。</p>
+                    <p class="content">觀看次數:736</p>
+                    </p>
                 </div>
-                <div class="img5 img-ob">
+                <div class="play-list">
                     <img src="/img/2-5.jfif" alt="">
+                    <p >
+
+                    <p class="content">演講人:李家寶</p>
+                    <p class="content">透過藝術來呈現出科技如何建構我們的現實</p>
+                    <p class="content">在這場可以改變你如何看世界的演說中，設計師和藝術家李家寶介紹了她的概念性計畫，揭露出數位媒體本質上的偏見。從讓你對紅色「過敏」的頭盔，到能用意想不到的方式來過濾網路內容的瀏覽器外掛程式，李家寶的創作呈現出科技如何對我們感知現實的方式產生中介影響。</p>
+                    <p class="content">觀看次數:7318</p>
+                    </p>
                 </div>
                 </ol>
             </div>
         </div>
         <div class="Web_footer">
-            <footer class="footer">
+            <footer align=center class="footer">
                 <div class="footertext">
                     <p>Copyright © 2020 inline Ltd. All Rights Reserved</p>
                     <p>Terms of Use/Privacy PolicyPowered by inlineVersion 7.25.1</p>
