--- a/Tech.html
+++ b/Tech.html
@@ -65,9 +65,24 @@
             <div class="tab__content">
                 <section class="videos">
                     <ul class="video-list">
-                        
                         <li class="video-list__item">
-                            <a href="#">
+                            <a href="/detail2.html">
+                                <div class="video-preview-image">
+                                    <img src="/img/2-4.jfif" alt="">
+                                </div>
+                                <div class="Words4">
+                                    <h2 class="content">談科技如何演化</h2>
+                                    <h6>演講人:Kevin Kelly</h6>
+                                    <h6 class="content">
+                                        科技狂熱者 Kevin Kelly 問：「科技要的是什麼？」，並發現它趨向普遍及複雜，就像生命的演化一樣。</h6>
+                                    <span class="watch">觀看次數:736</span>
+                                </div>
+
+                            </a>
+
+                        </li>
+                        <li class="video-list__item">
+                            <a href="">
                                 <div class="video-preview-image">
                                     <img src="/img/1-1.jfif" alt="">
                                 </div>
@@ -117,22 +132,7 @@
 
                             </a>
                         </li>
-                        <li class="video-list__item">
-                            <a href="#">
-                                <div class="video-preview-image">
-                                    <img src="/img/2-4.jfif" alt="">
-                                </div>
-                                <div class="Words4">
-                                    <h2 class="content">談科技如何演化</h2>
-                                    <h6>演講人:Kevin Kelly</h6>
-                                    <h6 class="content">
-                                        科技狂熱者 Kevin Kelly 問：「科技要的是什麼？」，並發現它趨向普遍及複雜，就像生命的演化一樣。</h6>
-                                    <span class="watch">觀看次數:736</span>
-                                </div>
-
-                            </a>
-
-                        </li>
+                        
                         <li class="video-list__item">
                             <a href="#">
                                 <div class="video-preview-image">
@@ -166,9 +166,6 @@
             <div class="tab__content">
                 <section class="videos">
                     <ul class="video-list">
-
-
-
                         <li class="video-list__item">
                             <a href="#">
                                 <div class="video-preview-image">
