--- a/detail2.html
+++ b/detail2.html
@@ -20,7 +20,9 @@
     <div align=center class="big">
         <div class="up">
             <div class="play">
-                <video class="video" src="/Tech.mp4" controls></video>
+                <iframe width="1903" height="768" src="https://www.youtube.com/embed/_ivu5nXwsEA" frameborder="2"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
             </div>
             <div class="word">
 
@@ -37,22 +39,24 @@
             </div>
         </div>
         <div class="down">
-            <div  class="Related-videos">
+            <div class="Related-videos">
                 <div class="play-list">
-                <div><img src="/img/2-1.jfif" alt=""></div>    
-                <div><p >
-                    <p class="content">演講人:Randy Pausch</p>
-                    <p class="content">科技洞悉你的感受</p>
-                    <p class="content">
-                        當科技比我們更了解自己時，會發生什麼事情呢？波碧·克文研究人類如何表達情緒。她認為撲克臉的時代終將結束，因為科技能輕易地讀懂我們透露出來的情緒信號。在一次演講和技術展示中，波碧·克文展示了如何透過「同理心技術」
-                        讀懂像身體溫度和呼吸中的化學成份這些生理訊息，而這些訊息能透露我們的感受。無論好壞，克文認為「如果我們能體悟同理心的力量，就能掌握科技，用科技幫助我們跨越情感和認知的鴻溝。」</p>
-                    <p class="content"> 觀看次數:7 </p>
-                    </p></div>    
+                    <div><img src="/img/2-1.jfif" alt=""></div>
+                    <div>
+                        <p>
+                        <p class="content">演講人:Randy Pausch</p>
+                        <p class="content">科技洞悉你的感受</p>
+                        <p class="content">
+                            當科技比我們更了解自己時，會發生什麼事情呢？波碧·克文研究人類如何表達情緒。她認為撲克臉的時代終將結束，因為科技能輕易地讀懂我們透露出來的情緒信號。在一次演講和技術展示中，波碧·克文展示了如何透過「同理心技術」
+                            讀懂像身體溫度和呼吸中的化學成份這些生理訊息，而這些訊息能透露我們的感受。無論好壞，克文認為「如果我們能體悟同理心的力量，就能掌握科技，用科技幫助我們跨越情感和認知的鴻溝。」</p>
+                        <p class="content"> 觀看次數:7 </p>
+                        </p>
+                    </div>
 
                 </div>
                 <div class="play-list">
                     <img src="/img/2-2.jfif" alt="">
-                    
+
                     <p>
 
                     <p class="content">演講人:Ray Kurzweil</p>
@@ -87,11 +91,13 @@
                 </div>
                 <div class="play-list">
                     <img src="/img/2-5.jfif" alt="">
-                    <p >
+                    <p>
 
                     <p class="content">演講人:李家寶</p>
                     <p class="content">透過藝術來呈現出科技如何建構我們的現實</p>
-                    <p class="content">在這場可以改變你如何看世界的演說中，設計師和藝術家李家寶介紹了她的概念性計畫，揭露出數位媒體本質上的偏見。從讓你對紅色「過敏」的頭盔，到能用意想不到的方式來過濾網路內容的瀏覽器外掛程式，李家寶的創作呈現出科技如何對我們感知現實的方式產生中介影響。</p>
+                    <p class="content">
+                        在這場可以改變你如何看世界的演說中，設計師和藝術家李家寶介紹了她的概念性計畫，揭露出數位媒體本質上的偏見。從讓你對紅色「過敏」的頭盔，到能用意想不到的方式來過濾網路內容的瀏覽器外掛程式，李家寶的創作呈現出科技如何對我們感知現實的方式產生中介影響。
+                    </p>
                     <p class="content">觀看次數:7318</p>
                     </p>
                 </div>
