--- a/detail2.html
+++ b/detail2.html
@@ -20,7 +20,7 @@
     <div align=center class="big">
         <div class="up">
             <div class="play">
-                <iframe width="1903" height="768" src="https://www.youtube.com/embed/_ivu5nXwsEA" frameborder="2"
+                <iframe width="80%" height="768" src="https://www.youtube.com/embed/_ivu5nXwsEA" frameborder="2"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen></iframe>
             </div>
